# debug-python-click

./: README.md  app.py  pyproject.toml  run_greet.py
.github/workflows/: ci.yml
debug_python_click/: app.py
